# oricat

./: CHANGELOG.md  Makefile  Makefile-extras  README.md  piemaker.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-workflow.yaml  publish-workflow.yaml  release-major-workflow.yaml  release-minor-workflow.yaml  release-patch-workflow.yaml
complexity/radon/: index.html  report.txt
complexity/wily/: index.html
coverage/coverage/: class_index.html  d_73f297eee27919bf___init___py.html  d_73f297eee27919bf_logger_py.html  function_index.html  index.html  status.json  z_73f297eee27919bf___init___py.html  z_73f297eee27919bf_blur_plates_py.html  z_73f297eee27919bf_categorise_orientation_py.html  z_73f297eee27919bf_categorise_py.html  z_73f297eee27919bf_logger_py.html
doc/sphinx/: conf.py  genindex.html  index.html  index.rst  oricat.html  oricat.rst  searchindex.js
doc/sphinx/_build/doctrees/: environment.pickle  index.doctree  oricat.doctree
doc/sphinx/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  oricat.html  search.html  searchindex.js
doc/sphinx/_build/html/_sources/: index.rst.txt  oricat.rst.txt
doc/sphinx/_sources/: index.rst.txt
examples/: oricat-cli.sh
lint/pylint/: index.html  report.json
oricat/: __init__.py  blur_plates.py  categorise.py  categorise_orientation.py  logger.py
test-integration/pytest/: index.html
test/pytest/: index.html
tests/: test_blur_plates.py  test_categorise_orientation.py  test_logger.py  test_oricat.py
tests-integration/: conftest.py  test_blur_plates.py  test_categorise.py  test_categorise_orientation.py  test_constructor.py
