[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[installer]
no-binary = [ ":none:" ]

[tool.poetry]
name = "oricat"
version = "0.10.1-pre.0"
description = "Categorise images by orientation"
license = "MIT"
authors = [ "Cliffano Subagio <cliffano@gmail.com>" ]
readme = "README.md"
homepage = "https://github.com/cliffano/oricat"
repository = "https://github.com/cliffano/oricat"
documentation = "https://github.com/cliffano/oricat"
keywords = [ "oricat", "images", "categorise", "orientation" ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

  [[tool.poetry.packages]]
  include = "oricat"

  [tool.poetry.scripts]
  oricat = "oricat:cli"

  [tool.poetry.dependencies]
  python = "^3.8"
  click = "^8.1.3"
  conflog = "^1.5.1"
  pillow = "^10.3.0"
  PyYAML = "^6.0.1"
  pyyaml-include = "^1.3.1"

[tool.poetry.group.dev.dependencies]
twine = "4.0.2"
wheel = "0.40.0"

[tool.poetry.group.test.dependencies]
coverage = "7.2.4"
pylint = "3.0.1"
pytest = "7.3.1"
wily = "1.24.0"

[tool.poetry.group.doc.dependencies]
pylint-report = "2.4.0"
pytest-html = "3.2.0"
Sphinx = "6.2.1"
