[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[installer]
no-binary = [ ":none:" ]

[tool.poetry]
name = "oricat"
version = "1.0.0"
description = "Categorise images by orientation"
license = "MIT"
authors = [ "Cliffano Subagio <cliffano@gmail.com>" ]
readme = "README.md"
homepage = "https://github.com/cliffano/oricat"
repository = "https://github.com/cliffano/oricat"
documentation = "https://github.com/cliffano/oricat"
keywords = [ "oricat", "images", "categorise", "orientation" ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

  [[tool.poetry.packages]]
  include = "oricat"

  [tool.poetry.scripts]
  oricat = "oricat:cli"

  [tool.poetry.dependencies]
  python = "^3.10"
  click = "8.1.7"
  conflog = "^1.5.1"
  pillow = "^10.3.0"
  PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
twine = "5.1.1"
wheel = "0.44.0"

[tool.poetry.group.test.dependencies]
coverage = "7.2.3"
numpy = "1.26.4"
pylint = "3.2.6"
pytest = "8.3.2"
wily = "1.25.0"

[tool.poetry.group.doc.dependencies]
pylint-report = "2.4.0"
pytest-html = "4.1.1"
Sphinx = "8.0.2"
