[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[installer]
no-binary = [ ":none:" ]

[tool.poetry]
name = "oricat"
version = "1.0.1-pre.0"
description = "Categorise images by orientation"
license = "MIT"
authors = [ "Cliffano Subagio <cliffano@gmail.com>" ]
readme = "README.md"
homepage = "https://github.com/cliffano/oricat"
repository = "https://github.com/cliffano/oricat"
documentation = "https://github.com/cliffano/oricat"
keywords = [ "oricat", "images", "categorise", "orientation" ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[[tool.poetry.packages]]
include = "oricat"

[tool.poetry.scripts]
oricat = "oricat:cli"

[tool.poetry.dependencies]
python = "^3.10"
click = "8.1.7"
conflog = "^2.1.0"
opencv-python-headless = "^4.9.0"
pillow = "^10.3.0"
PyYAML = "^6.0.3"

[tool.poetry.group.dev.dependencies]
black = "~25.12.0"
twine = "~6.2.0"
wheel = "~0.45.1"

[tool.poetry.group.test.dependencies]
coverage = "~7.13.0"
numpy = "1.26.4"
pylint = "~4.0.4"
pytest = "~9.0.2"
radon = "~6.0.1"

[tool.poetry.group.doc.dependencies]
ansi2html = "~1.9.2"
pylint-report = "~2.4.2"
pytest-html = "~4.1.1"
Sphinx = "8.1.3"
